--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "all": "^0.0.0",
     "bootstrap": "^5.3.7",
+    "json-loader": "^0.5.7",
     "next": "15.3.4",
     "next-transpile-modules": "^10.0.1",
     "react": "^19.1.0",
